cockroachlabs-preview-main/docs/v23.2/refresh.mdx
---
title: "REFRESH"
old_description: "The REFRESH statement updates the stored query results of a materialized view."
---

import { Refresh2 } from "/snippets/syntax-diagrams/Refresh2.jsx";

Stored query results in [materialized view](/docs/v23.2/views#materialized-views) are not automatically updated to reflect the latest state of the table(s) they query. The `REFRESH` [statement](/docs/v23.2/sql-statements) updates the stored query results of a materialized view.

<Note>
CockroachDB does not support materialized views that are refreshed on [transaction commit](/docs/v23.2/commit-transaction).
</Note>

## Required privileges

The user must be the [owner](/docs/v23.2/alter-view) of the materialized view or have [admin](/docs/v23.2/security-reference/authorization#admin-role) privileges.

## Synopsis

<Refresh2 />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>opt&#95;concurrently</code></td><td><code>CONCURRENTLY</code> (Default behavior) This keyword has no effect. It is present for PostgreSQL compatibility. All materialized views are refreshed concurrently with other jobs.</td></tr><tr><td><code>view&#95;name</code></td><td>The name of the materialized view to refresh.</td></tr><tr><td><code>opt&#95;clear&#95;data</code></td><td><code>WITH DATA</code> (Default behavior) Refresh the stored query results.<br/><code>WITH NO DATA</code> Drop the query results of the materialized view from storage.</td></tr></tbody></table>

## Example

The following example uses the [sample `bank` database](/docs/v23.2/cockroach-workload#bank-workload), populated with some workload values.

Suppose that you create a materialized view on the `bank` table:

```sql
> CREATE MATERIALIZED VIEW overdrawn_accounts
  AS SELECT id, balance
  FROM bank
  WHERE balance < 0;
```

```sql
> SELECT * FROM overdrawn_accounts;
```

```text
  id  | balance
------+----------
    1 |  -17643
    3 |   -5928
   13 |   -3700
...
(402 rows)
```

Now suppose that you update the `balance` values of the `bank` table:

```sql
> UPDATE bank SET balance = 0 WHERE balance < 0;
```

```text
UPDATE 402
```

The changes can be seen in the table with a simple `SELECT` statement against the table:

```sql
> SELECT id, balance
FROM bank
WHERE balance < 0;
```

```text
  id | balance
-----+----------
(0 rows)
```

Recall that materialized views do not automatically update their stored results. Selecting from `overdrawn_accounts` returns stored results, which are outdated:

```sql
> SELECT * FROM overdrawn_accounts;
```

```text
  id  | balance
------+----------
    1 |  -17643
    3 |   -5928
   13 |   -3700
...
(402 rows)
```

To update the materialized view's results, use a [`REFRESH`](/docs/v23.2/refresh) statement:

```sql
> REFRESH MATERIALIZED VIEW overdrawn_accounts;
```

```sql
> SELECT * FROM overdrawn_accounts;
```

```text
  id | balance
-----+----------
(0 rows)
```

## See also

- [Materialized views](/docs/v23.2/views#materialized-views)
- [`CREATE VIEW`](/docs/v23.2/create-view)
- [`SHOW TABLES`](/docs/v23.2/show-tables)
- [`ALTER VIEW`](/docs/v23.2/alter-view)
- [`DROP VIEW`](/docs/v23.2/drop-view)
